--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,87 +1,92 @@
 body, html {
-    background: #f9f9f9;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
+  color: #000;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .header {
-    background: #aa08ff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    text-align: center;
-}
-
-.header img {
-    margin: 20px auto;   
-    padding: 20px 0; 
-    text-align: center;
-}
-
-.header ul {
-  list-style: none;
-}
-
-.header li {
-  display: inline;
-  margin-right: 30px;
+  font-size: 200px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .main {
-    margin: 40px 0;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.email {
-    background: #fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    font-size: 18px;
-    margin: 0 0 8px;
-    padding: 20px 0;
+.main .container {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  max-width: 800px;
 }
 
-.email:hover {
-    background: #fcfcfc;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-    cursor: pointer;
+.rank {
+  background: #ffcd2e;
+  color: #fff;
+  display: block;
+  float: left;
+  font-size: 125px;
+  height: 200px;
+  margin: 0;
+  padding: 30px;
+  width: 200px;
 }
 
-.email span {
-    display: inline-block;
-    margin: 0;
-    overflow: hidden;
-    position: relative;
-    text-overflow: ellipsis;
+div.ng-scope {
+  color: #000;
 }
 
-.from {
-    font-size: 16px;
-    font-weight: 700;
-    padding-left: 2%;
-    width: 20%;
+.img_container {
+  display: block;
+  float: left;
+  height: 200px;
+  overflow: hidden;
+  width: 200px;
 }
 
-.subject {
-    width: 65%;
+.img_container img.img-responsive {
+  display: block;
+  height: 100%;
+  max-width: 9999px;
+  position: relative;
+  width: auto;
 }
 
-.date {
-    font-size: 14px;
-    padding-right: 2%;
-    text-align: right;
-    text-overflow: ellipsis;
+h2 {
+  background: #ff2c5e;
+  color: #fff;
+  display: block;
+  float: left;
+  height: 200px;
+  margin: 0;
+  padding: 30px;
+  text-overflow: ellipsis;
+  width: 200px;
 }
 
-.footer {
-  background:#000;
-  padding:60px 0; 
+div.ng-scope:nth-child(even) p+p {
+  width: 400px;
 }
 
-.footer h3 {
-  color:#fff;
-  font-size:18px;
-  font-weight:300;  
+p {
+  background: #f9f9f9;
+  display: block;
+  float: left;
+  font-size: 18px;
+  height: 200px;
+  margin: 0;
+  padding: 30px;
+  width: 200px;
 }
 
-.footer ul {
-  color:#0393ff; 
-  list-style:none;
-  padding-left:0px;  
+div.ng-scope p+p {
+  background: #e5e5e5;
+}
+
+div.ng-scope p+p+p {
+  background: #000;
+  color: #fff;
+  font-size: 14px;
+  width: 800px;
 }
