--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,92 +1,74 @@
-body, html {
-  color: #000;
-  font-family: 'Montserrat', sans-serif;
+html, body {
+  background: #fff;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  text-transform: lowercase;
 }
-
-.header {
-  font-size: 200px;
-  font-weight: 700;
-  text-align: center;
-}
-
-.main {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.main .container {
-  margin: 0 auto;
+.container {
   padding: 0;
   width: 100%;
-  max-width: 800px;
 }
-
-.rank {
-  background: #ffcd2e;
-  color: #fff;
-  display: block;
-  float: left;
-  font-size: 125px;
-  height: 200px;
+.header {
   margin: 0;
-  padding: 30px;
-  width: 200px;
+  padding: 0;
 }
-
-div.ng-scope {
+.header img {
+  margin: 0 20px 0 0;
+}
+.header a {
   color: #000;
+  font-size: 20px;  
+  text-decoration: none; 
 }
-
-.img_container {
-  display: block;
-  float: left;
-  height: 200px;
-  overflow: hidden;
-  width: 200px;
+.header a:hover {
+  color: #c91717;
+  text-decoration: none;   
 }
-
-.img_container img.img-responsive {
-  display: block;
-  height: 100%;
-  max-width: 9999px;
-  position: relative;
-  width: auto;
-}
-
-h2 {
-  background: #ff2c5e;
-  color: #fff;
-  display: block;
-  float: left;
-  height: 200px;
-  margin: 0;
-  padding: 30px;
-  text-overflow: ellipsis;
-  width: 200px;
-}
-
-div.ng-scope:nth-child(even) p+p {
-  width: 400px;
-}
-
-p {
-  background: #f9f9f9;
-  display: block;
-  float: left;
-  font-size: 18px;
-  height: 200px;
-  margin: 0;
-  padding: 30px;
-  width: 200px;
-}
-
-div.ng-scope p+p {
-  background: #e5e5e5;
-}
-
-div.ng-scope p+p+p {
+.main h2 {
   background: #000;
   color: #fff;
-  font-size: 14px;
-  width: 800px;
+  font-size: 16px;
+  height: 80px;
+  margin: 0;
+  padding: 10px;
+  position: absolute;
+  width: 80px;
+  z-index: 1;
 }
+.item {
+  cursor: pointer;
+  margin: 0;  
+  padding: 1%;
+}
+.item:hover {
+  background: #000; 
+  text-decoration: none;
+  transition: background 500ms;
+}
+p.author {
+  color: #000;
+  padding: 24px;
+  text-align: left;
+}
+.item:hover p.author, .item:hover a {
+  color: #fff;
+  text-decoration: none;
+}
+.photo {
+  margin: 0 0 80px;   
+}
+.photo img {
+  width: 40%;
+}
+.photo h2 {
+  color: #000;
+  padding: 20px 108px;
+}
+.photo p {
+  color: #6f6f6f;
+  margin: 0;
+  padding: 0 108px 0;
+}
+  
